# ie500-data-mining-group7

./: .gitignore  LICENSE  README.md  pyproject.toml  restored-file.txt
Approach1/: 12_augment_2018_fast_f1.ipynb  14_train_test_split.ipynb  20_loading_data.ipynb  model_learningV2.ipynb  unfuck.py  util.py
WF_OM/: model_learning.ipynb
apporach_20/: 00_train_model_template.ipynb  20_simple_models.ipynb  data_preparation.py  evaluation.py  linear_regression_utils.py  lstm.py  neural_net.ipynb  xgboost_utils.py
approach_01/: 40_plots.ipynb
approach_10/: model_learning_pca.ipynb
approach_20/: 11_simulation_LinReg.ipynb  model_optimization.py  race_simulator_linear_regression.py  race_simulator_xgboost.py
data/: .gitattributes  info.txt  preprocessed.csv  sample_submission.csv  test.csv  train.csv  validation.csv
documents/: kaggle_issues.md
lap_simulation/: .gitignore  000_debugger.ipynb  00_train_model_template.ipynb  10_simulation.ipynb  10_simulation_NN.ipynb  11_simulation_LinReg.ipynb  12_simulation_XGBoost.ipynb  20_logistic_regression.ipynb  20_simple_models.ipynb  data_preparation.py  evaluation.py  features.py  linear_regression_model.pth  lstm.py  lstm_model.pth  neural_net.ipynb  race_simulation_results.csv  race_simulator.py  race_simulator_NN.py  race_simulator_normalLaps.py  race_simulator_xgboost.py  sim_utils.py  xgboost_utils.py
neural_net/: model_architecture  neural_net.ipynb  neural_net_2018.ipynb  (+1 more)
race_simulation_clean/: config.py  pyproject.toml
race_simulation_clean/common/: base_simulator.py  config.py  data_preparation.py  driver.py  race.py  requiredFeatures.py  simulation_logger.py  simulation_validator.py  utils.py
race_simulation_clean/data/util/: drivers_attributes.csv
race_simulation_clean/models/LSTM/: LSTMRaceSimulator.py  lstm.py
race_simulation_clean/models/Regression/: polyRegression.py
race_simulation_clean/models/SimpleRaceSimulator/: SimpleRaceSimulator.py
race_simulation_clean/models/xgboost/: xgboost.py
race_simulation_clean/notebooks/: f1_poly_model.pkl  f1_xgboost_model.json  prepare_data_splits.ipynb  simulate_lstm.ipynb  train_lstm.ipynb  train_polyRegression.ipynb  train_xgboost.ipynb
race_simulation_clean/notebooks/correlation/: test.ipynb
race_simulation_clean/notebooks/models/: lstm_study_20241208_190911.pkl
(+489 files in other folders)
