[tool.poetry]
name = "ie500-data-mining-group7"
version = "0.1.0"
description = ""
authors = ["Frederick Engelns-Bauer <frederick.engelns-bauer@sap.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
fastf1 = "^3.4.3"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
ergast-py = "^1.0.0"
requests = "^2.32.3"
requests-cache = "^1.2.1"
backoff = "^2.2.1"
xgboost = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
