[tool.poetry]
name = "ie500-data-mining-group7"
version = "0.1.0"
description = ""
authors = ["Frederick Engelns-Bauer <frederick.engelns-bauer@sap.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12 <3.13"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
fastf1 = "^3.4.3"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
ergast-py = "^1.0.0"
requests = "^2.32.3"
requests-cache = "^1.2.1"
backoff = "^2.2.1"
xgboost = "^2.1.2"
tqdm = "^4.67.0"
ipywidgets = "^8.1.5"
torch = "^2.5.1"
pytorch-lightning = "^2.4.0"
tensorboard = "^2.18.0"
torch-tb-profiler = "^0.4.3"
lightning = "^2.4.0"
ydata-profiling = "^4.12.0"
tensorflow = "^2.18.0"
lightgbm = "^4.5.0"
optuna = "^4.1.0"
flaml = {extras = ["automl"], version = "^2.3.2"}
optuna-integration = "^4.1.0"
thefuzz = "^0.22.1"
nbstripout = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
