[tool.poetry]
name = "race-simulation copy"
version = "0.1.0"
description = ""
authors = ["Frederick Engelns-Bauer <frederick.engelns-bauer@sap.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipython = "^8.30.0"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
